# Opsway

./: .env.example  .gitignore  DEVELOPMENT.md  Makefile  README.md  docker-compose.yml  test_neutralize.py
api/: Dockerfile  alembic.ini  celerybeat-schedule  pyproject.toml
api/alembic/: env.py
api/app/: main.py
api/app/core/: config.py  database.py  security.py
api/app/models/: __init__.py
api/app/routers/: auth.py  backups.py  branches.py  builds.py  ci_config.py  domains.py  members.py  monitoring.py  pipeline.py  projects.py  stats.py  terminal.py  uptime.py  webhooks.py
api/app/schemas/: __init__.py
api/app/services/: ci_config_generator.py  ssh.py
api/app/worker/: celery_app.py  docker_manager.py  git_utils.py  notifier.py
api/app/worker/tasks/: backup.py  build.py  build.py-e  cleanup.py  db_clone.py  neutralize.py  odoo_utils.py  repo.py  restore.py  uptime.py
api/migrations/: add_project_type.sql
api/scripts/: backfill_keys.py
config_pipeline/: .flake8  .opsway.yml  .pre-commit-config.yml  .pylintrc  .pylintrc-mandatory  docker-compose.yml  odoo.conf.template
infra/traefik/dynamic/: config.yml
web/: Dockerfile  docker-entrypoint.sh  next.config.ts  package-lock.json  package.json
web/app/: error.tsx  global-error.tsx  globals.css  layout.tsx
web/app/(dashboard)/: layout.tsx
web/app/login/: page.tsx
web/components/: providers.tsx
web/components/builds/: build-timeline.tsx
web/components/layout/: sidebar.tsx
web/components/projects/: ci-config-settings.tsx  new-project-modal.tsx  (+2 more)
web/lib/: api.ts  types.ts  utils.ts
(+16 files in other folders)
